--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "eslint": "^2.10.2",
+    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
